# tetris-ai

engine/: CMakeLists.txt
engine/include/: ActivePiece.hpp  GridState.hpp  PieceRandomizer.hpp  ShapeState.hpp  grid.hpp  shape.hpp  utils.hpp
engine/src/: CMakeLists.txt  Grid.cpp  GridState.cpp  Shape.cpp  ShapeState.cpp  Utils.cpp
engine/tests/: CMakeLists.txt  test_Grid.cpp  test_GridState.cpp
